--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-/__pycache__
+__pycache__/
+algorithm/__pycache__/
 /2012-01*
 label.mat
+*.csv
+\#*
+.idea/
+!confusion_matrix.csv
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+venv/
+input/temp
